labs/5-traffic-management/lab1/vs-reviews-headers.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  exportTo:
  - $USER_NAMESPACE-back
  - $USER_NAMESPACE-front
  http:
  - match:
    - headers:
        end-user:
          exact: $USER_NAMESPACE
    route:
    - destination:
        host: reviews
        subset: v3
  - route:
    - destination:
        host: reviews
        subset: v2
